<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:background="@color/colorAccent"
    >

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/Sound"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/Music"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/Theme"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/Languages"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="420dp"
        android:text="@string/credits"
        android:textSize="25sp"
        />



    <TextView
        android:id="@+id/textVie8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/on"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/off"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/textVie10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="180dp"
        android:text="on          off"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="180dp"
        android:text="@string/off"
        android:textSize="25sp"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="105dp"
        />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="185dp"
        />

    <ImageButton
        android:id="@+id/backToMain"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:src="?attr/actionModeCloseDrawable"
        android:visibility="visible"
        />

</RelativeLayout>
